--- a/MyApplicationSienke/app/src/main/res/values/strings.xml
+++ b/MyApplicationSienke/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">移动安检</string>
+    <string name="app_name">ThinkerSoft</string>
     <string name="sienke">思恩科信息技术有限公司</string>
     <string name="user_name">用户名：</string>
     <string name="start_degree">起度：</string>
